Disabling Screen Rotation

--- a/Stylesheets/Highlight.css
+++ b/Stylesheets/Highlight.css
@@ -17,3 +17,9 @@
     cursor: default;
   }
   
+  @media only screen and (orientation:portrait){
+  body {
+    height: 100vw;
+    transform: rotate(90deg);
+  }
+}
