--- a/Stylesheets/Window.css
+++ b/Stylesheets/Window.css
@@ -17,7 +17,8 @@ body{
   background-color: #244992;
   background-image: linear-gradient(180deg, #244992 0%, #00E1E1 97.4%);
   background-repeat: no-repeat;
-  background-size: 100vw 100vh;
+  background-size: 200vw 100vh;
+  background-position: center;
   margin: 0;
 }
 
