--- a/Stylesheets/Window.css
+++ b/Stylesheets/Window.css
@@ -12,9 +12,11 @@ body{
 }
 
 #Background{
+  --Width: 200vw;
   position: fixed;
   height: calc(100vh + 20px);
-  width: 100vw;
+  width: var(--Width);
+  left: calc(50% - var(--Width)/2);
   background-color: #244992;
   background-image: linear-gradient(180deg, #244992 0%, #00E1E1 97.4%);
   background-repeat: no-repeat;
