--- a/Stylesheets/Window.css
+++ b/Stylesheets/Window.css
@@ -1,5 +1,6 @@
 
 html{
+  height: 100%;
   margin: 0;
   font-family: Arial;
   color: white;
@@ -8,7 +9,14 @@ html{
 
 body{
   margin: 0px;  
-  background-color: #244992;
+  /* background-color: #244992; */
+  /* background-color: #244992; */
+  background: linear-gradient(180deg, #244992 0%, #00E1E1 97.4%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin: 0;
+  
 }
 
 #Background{
@@ -17,8 +25,8 @@ body{
   height: calc(100vh + 20px);
   width: var(--Width);
   left: calc(50% - var(--Width)/2);
-  background-color: #244992;
-  background-image: linear-gradient(180deg, #244992 0%, #00E1E1 97.4%);
+  /* background-color: #244992; */
+  /* background-image: linear-gradient(180deg, #244992 0%, #00E1E1 97.4%); */
   background-repeat: no-repeat;
   background-size: 200vw 100vh;
   background-position: center;
@@ -31,7 +39,7 @@ body{
   background-color: none;
   --Constraining_Dimension: 100vw;  
   --Minimum_Length: max(var(--Constraining_Dimension),200px);
-  --Size: min(calc(var(--Minimum_Length) - 2 * var(--Margin)),700px);
+  --Size: min(calc(var(--Minimum_Length) - 2 * var(--Margin)),var(--Absolute_Maximum_Size));
   height: calc(var(--Size) + 2 * var(--Margin));
   width: calc(var(--Size) + 2 * var(--Margin));
   z-index: 2;
