--- a/Stylesheets/Window.css
+++ b/Stylesheets/Window.css
@@ -6,6 +6,7 @@ html{
   color: white;
   font-weight: bold;
   background-color: #244992;
+  animation: Transition_Background_Color 2s ease forwards;
 }
 
 body{
@@ -18,7 +19,11 @@ body{
   background-size: cover;
   background-position: center;
   margin: 0;
-  
+  filter: opacity(0);
+  animation-delay: 2s;
+  animation: Simple_Fade_In_Page 5s ease forwards;
+  /* animation: Transition_Background_Color 3s ease forwards; */
+
 }
 
 #Background{
