--- a/Stylesheets/Window.css
+++ b/Stylesheets/Window.css
@@ -19,8 +19,8 @@ body{
   background-size: cover;
   background-position: center;
   margin: 0;
-  opacity: 0;
-  animation: Simple_Fade_In_Page 2s ease forwards;
+  opacity: 1;
+  /* animation: Simple_Fade_In_Page 2s ease forwards; */
   /* animation: Transition_Background_Color 3s ease forwards; */
 
 }
