--- a/Stylesheets/Animations.css
+++ b/Stylesheets/Animations.css
@@ -26,3 +26,15 @@
   0%{background-color: #FFFFFF;}
   100%{background-color: #244992;}  
 }
+
+.Button_Pressed{
+    animation: Squeeze_Keyframes 0.15s ease-out forwards;
+  }
+  
+  @keyframes Squeeze_Keyframes{
+    0%{transform: scale(1);}
+    50%{transform: scale(1.1);}
+    100%{transform: scale(1);}
+
+  }
+  
