--- a/Stylesheets/Window.css
+++ b/Stylesheets/Window.css
@@ -6,6 +6,8 @@ html{
   color: white;
   font-weight: bold;
   background-color: #244992;
+  font-size: calc(0.03*var(--Size));
+
   /* animation: Transition_Background_Color 2s ease forwards; */
 }
 
@@ -18,7 +20,6 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  margin: 0;
   opacity: 1;
   /* animation: Simple_Fade_In_Page 2s ease forwards; */
   /* animation: Transition_Background_Color 3s ease forwards; */
