--- a/Stylesheets/Card.css
+++ b/Stylesheets/Card.css
@@ -3,6 +3,7 @@
   --Margin: 3vw;
   --Absolute_Minimum_Size: 200px;
   --Absolute_Maximum_Size: calc(100vh - 2*var(--Margin));
+  --Animation_Delay: 1s;
 }
 
 #Main_Card{
@@ -28,7 +29,7 @@
   filter: opacity(0);
   transform: translateY(100vh) scale(0.5);
   animation: Fade_In_Keyframes 0.5s ease forwards;
-  animation-delay: 0.2s;
+  animation-delay: calc(var(--Animation_Delay) + 0.2s);
   overflow: hidden;
 }
 
@@ -36,7 +37,7 @@
   filter: opacity(0);
   transform: scale(0.7);
   animation: Simple_Fade_In_Keyframes 0.5s ease forwards;
-  animation-delay: 0.8s;
+  animation-delay: calc(var(--Animation_Delay) + 0.8s);
 }
 
 #Bio{
@@ -45,7 +46,7 @@
   filter: opacity(0);
   transform: scale(0.7);
   animation: Simple_Fade_In_Keyframes 0.5s ease forwards;
-  animation-delay: 0.8s;
+  animation-delay: calc(var(--Animation_Delay) + 0.8s);
 }
 
 .Containers{
@@ -84,21 +85,21 @@
 
 #Link_1{
   animation: Simple_Fade_In_Keyframes 0.5s ease forwards;
-  animation-delay: 1.2s;
+  animation-delay: calc(var(--Animation_Delay) + 1.2s);
   transform: scale(1);
   cursor: pointer;
 }
 
 #Link_2{
   animation: Simple_Fade_In_Keyframes 0.5s ease forwards;
-  animation-delay: 1.4s;
+  animation-delay: calc(var(--Animation_Delay) + 1.4s);
   transform: scale(1);
   cursor: pointer;
 }
 
 #Link_3{
   animation: Simple_Fade_In_Keyframes 0.5s ease forwards;
-  animation-delay: 1.6s;
+  animation-delay: calc(var(--Animation_Delay) + 1.6s);
   transform: scale(1);
   cursor: pointer;
 }
@@ -131,7 +132,7 @@
   box-shadow: inset 0 calc(var(--Size)*0.005) calc(var(--Size)*0.005) calc(var(--Size)*0.003) rgba(0,0,0,0.35);
   border: calc(var(--Size)*0.014) solid #244992;
   animation: Twist_Fade_In_Keyframes 0.8s ease-in forwards;
-  animation-delay: 1.2s;
+  animation-delay: calc(var(--Animation_Delay) + 1.2s);
   filter: opacity(0);
   transform: rotate(380deg) scale(0.8);
 }
