--- a/Stylesheets/Card.css
+++ b/Stylesheets/Card.css
@@ -137,7 +137,7 @@
   transform: rotate(380deg) scale(0.8);
 }
 
-.Share_Button{
+#Share_Button{
   --Share_Button_Margin: calc(0.02*var(--Size));
   --Diameter: calc(var(--Scaler)*var(--Size));
   top: var(--Share_Button_Margin);
