--- a/Stylesheets/Card.css
+++ b/Stylesheets/Card.css
@@ -123,7 +123,7 @@
   top: calc(50% - var(--Diameter)/2 + var(--Margin)/2);
   background-color: white;
   border-radius: 100%;
-  background-image: url("../Assets/Starry Starlight.png");
+  background-image: url("../Assets/Starry-Starlight.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
