--- a/Stylesheets/Card.css
+++ b/Stylesheets/Card.css
@@ -62,6 +62,8 @@
   align-items: flex-start;
   transform: scale(1);
   transition: 0.2s;
+  outline: none; 
+  -webkit-touch-callout: none;
 }
 
 .Containers:nth-child(2){
@@ -82,6 +84,7 @@
   filter: opacity(0);
   transform: scale(0.7);
   outline: none; 
+  -webkit-touch-callout: none;
 }
 
 #Link_1{
