--- a/Stylesheets/Card.css
+++ b/Stylesheets/Card.css
@@ -54,7 +54,6 @@
   display: flex;
   height: 100%;
   width: 100%;
-  /* border: 0.1px solid black; */
   font-size: calc(0.03*var(--Size));
   color: rgba(255,255,255,0.9);
   text-align: center;
@@ -85,6 +84,11 @@
   transform: scale(0.7);
   outline: none; 
   -webkit-touch-callout: none;
+}
+
+.Links:focus {
+  outline: none;
+  box-shadow: none;
 }
 
 #Link_1{
