--- a/Stylesheets/Card.css
+++ b/Stylesheets/Card.css
@@ -63,6 +63,7 @@
   transition: 0.2s;
   outline: none; 
   -webkit-touch-callout: none;
+  border: none;
 }
 
 .Containers:nth-child(2){
@@ -83,6 +84,11 @@
   filter: opacity(0);
   transform: scale(0.7);
   outline: none; 
+  border: none;
+  color: white;
+  font-weight: bold;
+  /* background-color: rgba(42, 89, 181, 0.5); */
+  font-size: calc(0.03*var(--Size));
   -webkit-touch-callout: none;
 }
 
