Possible background image concept.

--- a/Stylesheets/Window.css
+++ b/Stylesheets/Window.css
@@ -32,6 +32,8 @@ body{
   background-size: 200vw 100vh;
   background-position: center;
   margin: 0;
+  /* background-image: url('../Assets/Group 7.svg'); */
+
 }
 
 #Background_2{
