--- a/Pages/Code_Stylesheets/Cards.css
+++ b/Pages/Code_Stylesheets/Cards.css
@@ -41,6 +41,10 @@
   opacity: 0;
   transform: scale(0);
   transition: 0.2s;
+  
+  opacity: 1;
+  transform: scale(1);
+  transition: 0.2s;
 }
 
 .Show_About_Card{
@@ -48,7 +52,6 @@
   transform: scale(1);
   transition: 0.2s;
 }
-
 
 .Network_Card{
   position: absolute;
@@ -74,7 +77,6 @@
   opacity: 1;
   transition: 0.2s;
 }
-
 
 .Battery_Card{
   position: absolute;
@@ -118,14 +120,7 @@
   transform: translateX(20em);
   opacity: 0;
   transition: 0.2s ease-out;
-  -webkit-mask: -webkit-gradient(
-   linear,
-   right 5%,
-   left 5%,
-   from(rgba(255, 255, 255, 1)),
-   to(rgba(255, 255, 255, 0))
- );
-
+  -webkit-mask: -webkit-gradient(linear,right 5%,left 5%,from(rgba(255, 255, 255, 1)),to(rgba(255, 255, 255, 0)));
 }
 
 .Show_Date_Card{
@@ -133,4 +128,19 @@
   opacity: 1;
   transition: 0.2s;
 }
+
+#About_Card_Title{
+  height: 30%;
+  width: 30%;
+  color: rgba(0,0,0,0.8);
+  border: 1px solid white;
+}
+
+
+
+
+
+
+
+
 
