--- a/Pages/Code_Stylesheets/Window.css
+++ b/Pages/Code_Stylesheets/Window.css
@@ -14,3 +14,14 @@ html,body{
   background-color: rgba(225,225,232,1);
 }
 
+body {
+  overflow: hidden; /* Hide scrollbars */
+}
+
+body {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+body::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
+}
