Mobile Responsiveness Update

--- a/Pages/Code_Stylesheets/Cards.css
+++ b/Pages/Code_Stylesheets/Cards.css
@@ -29,7 +29,8 @@
   --Height: 20em;
   --Width: 34em;
   height: var(--Height);
-  width: var(--Width);
+  width: var(--Width);  
+  
   top: calc(50% - var(--Height)/2 - 1.5em);
   left: calc(50% - var(--Width)/2);
   background-color: rgba(255,255,255,0.4);
@@ -41,10 +42,11 @@
   opacity: 0;
   transform: scale(0);
   transition: 0.2s;
-  
+  color:red;
   opacity: 1;
   transform: scale(1);
   transition: 0.2s;
+  font-size: min(2vw,20px);
 }
 
 .Show_About_Card{
