--- a/Pages/Code_Stylesheets/About_Card.css
+++ b/Pages/Code_Stylesheets/About_Card.css
@@ -1,8 +1,8 @@
 
 .About_Card{
   display: grid;
-  grid-template-columns: 2.2fr 1fr 1fr 0.2fr;
-  grid-template-rows: 3fr repeat(10,1fr) 4fr;
+  grid-template-columns: 2.2fr 1fr 1fr 0.25fr;
+  grid-template-rows: 4fr repeat(10,1fr) 4fr;
   color: rgb(45,45,45);
 }
 
@@ -10,6 +10,34 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.7em;
     grid-column: 2 / span 3;
+}
+
+#Tab_Bar{
+  display: grid;
+  grid-gap: 0.2em;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(5,1fr);
+  position: relative;
+  grid-column: 1 / span 4;
+  grid-row: 1 / span 1;
+  padding: 1em 5em 1em 5em;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: center;
+}
+
+.Tab_Bar_Items{
+  display: flex;
+  /* border: 0.2px solid rgba(255,255,255,0.2); */
+  justify-content: center;
+  align-items: flex-start;
+  text-align: center;
+  font-size: 0.5em;
+  color: rgb(45,45,45);
+  padding: 0.6em;
+  border-radius: 0.25em;
+  background-color: rgba(0,0,0,0.05);
 }
 
 #About_Card_Title{
@@ -20,8 +48,26 @@
 }
 
 #Image_Container{
+  display: flex;
   grid-column: 1 / span 1;
-  grid-row: 1 / span 12;
+  grid-row: 3 / span 12;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: center;
+}
+
+#Circle_Mask{
+  margin-top: -0.5em;
+  margin-left: 0.5em;
+  display: flex;
+  position: relative;
+  background-color: gray;
+  height: 10em;
+  width: 10em; 
+  border-radius: 100%;
+  border: 0.32em solid rgba(250,250,250,1);
+  box-sizing: border-box;
+  box-shadow: 0 0.1em 0.2em 0.1em rgba(0,0,0,0.15);  
 }
 
 .Detail_Buttons{
@@ -38,8 +84,12 @@
   color: rgb(60,60,60);
   background-color: rgba(255,255,255,0.35);
   box-shadow: 0 0.1em 0.1em 0 rgba(0,0,0,0.05);
-
+  padding: 0.3em;
 }
+
+
+
+
 
 
 
