--- a/Pages/Code_Stylesheets/Cards.css
+++ b/Pages/Code_Stylesheets/Cards.css
@@ -24,14 +24,12 @@
 }
 
 .About_Card{
-  /* font-size: 0.2em; */
   position: absolute;
   color: black;
   --Height: 18em;
   --Width: 32em;
   height: var(--Height);
   width: var(--Width);  
-  
   top: calc(50% - var(--Height)/2 - 1.5em);
   left: calc(50% - var(--Width)/2);
   background-color: rgba(255,255,255,0.4);
@@ -43,8 +41,6 @@
   opacity: 0;
   transform: scale(0);
   transition: 0.2s;
-  color:red;
-
   font-size: min(2vw,20px);
 }
 
@@ -55,12 +51,14 @@
 }
 
 .Network_Card{
+  display: grid;
+  grid-template-rows: 1.5fr 0.1fr 0.8fr 1fr 0.1fr 0.9fr 0.1fr 0.9fr;
+  grid-template-columns: repeat(10,1fr);
   position: absolute;
   color: black;
   height: 9em;
   width: 13em;
   background-color: rgba(255,255,255,0.4);
-  /* background-color: red; */
   border-radius: 0.8em;
   top: 2.3em;
   right: 2.3em;
@@ -70,6 +68,10 @@
   box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1);
   transform: translateX(18em);
   opacity: 0;
+  transition: 0.2s;
+  
+  transform: translateX(0);
+  opacity: 1;
   transition: 0.2s;
 }
 
