Network Card Updated

--- a/Pages/Code_Stylesheets/Menu_Bar.css
+++ b/Pages/Code_Stylesheets/Menu_Bar.css
@@ -37,7 +37,7 @@
 }
 
 #Network_Button{
-  background-image: url("../../Assets/WIFI.svg");
+  background-image: url("../../Assets/WIFI_1.svg");
   background-size: 55%;
   background-position: center;
   background-repeat: no-repeat;
