--- a/Pages/Code_Stylesheets/Cards.css
+++ b/Pages/Code_Stylesheets/Cards.css
@@ -5,7 +5,7 @@
   height: 20em;
   width: 18em;
   background-color: rgba(255,255,255,0.4);
-  border-radius: 0.8em;
+  border-radius: 0.5em;
   top: 2.3em;
   right: 0.3em;
   z-index: 1;
@@ -34,7 +34,7 @@
   top: calc(50% - var(--Height)/2 - 1.5em);
   left: calc(50% - var(--Width)/2);
   background-color: rgba(255,255,255,0.4);
-  border-radius: 0.8em;
+  border-radius: 0.5em;
   z-index: 1;
   -webkit-backdrop-filter: blur(3em);
   backdrop-filter: blur(3em);
@@ -53,14 +53,14 @@
 
 .Network_Card{
   display: grid;
-  grid-template-rows: 1.5fr 0.535em 1fr 1.2fr 1.2fr 0.535em 1.5em 0.535em 1.5em;
+  grid-template-rows: 2.5em 0.535em 1.5em 2em 2em 0.535em 1.5em 0.535em 1.5em;
   grid-template-columns: repeat(10,1fr);
   position: absolute;
   color: black;
-  height: 12em;
+  height: 12.84em;
   width: 14em;
   background-color: rgba(255,255,255,0.4);
-  border-radius: 0.8em;
+  border-radius: 0.5em;
   top: 2.3em;
   right: 1.3em;
   z-index: 1;
@@ -70,7 +70,18 @@
   transform: translateX(18em);
   opacity: 0;
   transition: 0.2s;
-  padding-bottom: 0.3em;
+  overflow: hidden;
+  
+  transform: translateX(0);
+  opacity: 1;
+  transition: 0.2s;
+}
+
+.Network_Card_Collapsed{
+  height: 2.5em;
+  height: 12.84em;
+
+  
 }
 
 .Show_Network_Card{
@@ -86,7 +97,7 @@
   width: 13em;
   background-color: rgba(255,255,255,0.4);
   /* background-color: red; */
-  border-radius: 0.8em;
+  border-radius: 0.5em;
   top: 2.3em;
   right: 0.3em;
   z-index: 1;
