--- a/Pages/Code_Stylesheets/Cards.css
+++ b/Pages/Code_Stylesheets/Cards.css
@@ -71,13 +71,12 @@
   transition: 0.2s;
   overflow: hidden;
   transition: 0.2s;
+  z-index: 2;
 }
 
 .Network_Card_Collapsed{
   height: 2.5em;
   height: 12.84em;
-
-  
 }
 
 .Show_Network_Card{
@@ -87,6 +86,9 @@
 }
 
 .Battery_Card{
+  display: grid;
+  grid-template-rows: 2.5em 0.535em 2em 0.535em 2em 0.535em 2em;
+  grid-template-columns: 1fr;
   position: absolute;
   color: black;
   height: 9em;
@@ -104,6 +106,10 @@
   transform: translateX(18em);
   opacity: 0;
   transition: 0.2s;
+  justify-content: center;
+  align-items: center;
+  transform: translateX(0);
+  opacity: 1;
 }
 
 .Show_Battery_Card{
