--- a/Pages/Code_Stylesheets/About_Card.css
+++ b/Pages/Code_Stylesheets/About_Card.css
@@ -1,9 +1,33 @@
 
 .About_Card{
+  position: absolute;
+  color: black;
+  --Height: 18em;
+  --Width: 32em;
+  height: var(--Height);
+  width: var(--Width);  
+  top: calc(50% - var(--Height)/2 - 1.5em);
+  left: calc(50% - var(--Width)/2);
+  background-color: rgba(255,255,255,0.4);
+  border-radius: 0.5em;
+  z-index: 1;
+  -webkit-backdrop-filter: blur(3em);
+  backdrop-filter: blur(3em);
+  box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1);
+  opacity: 0;
+  transform: scale(0);
+  transition: 0.2s;
+  font-size: min(2vw,20px);
   display: grid;
   grid-template-columns: 2.2fr 1fr 1fr 0.25fr;
   grid-template-rows: 2fr 0.5fr repeat(10,1fr) 4fr;
   color: rgb(65,65,65);
+}
+
+.Show_About_Card{
+  opacity: 1;
+  transform: scale(1);
+  transition: 0.2s;
 }
 
 .About_Details{
