--- a/Pages/Code_Stylesheets/Battery_Card.css
+++ b/Pages/Code_Stylesheets/Battery_Card.css
@@ -1,5 +1,40 @@
 
-#Battery_Card_Title,#Power_Source_Heading,#Energy_Heading{
+.Battery_Card{
+  display: grid;
+  grid-template-rows: 2em 1.5em 0.535em 1.5em 1.5em 0.535em 1.5em;
+  grid-template-columns: 1fr;
+  position: absolute;
+  color: black;
+  height: 9em;
+  width: 13em;
+  background-color: rgba(255,255,255,0.4);
+  border-radius: 0.5em;
+  top: 2.3em;
+  right: 0.3em;
+  z-index: 1;
+  -webkit-backdrop-filter: blur(1em);
+  backdrop-filter: blur(1em);
+  backdrop-filter: blur(1em);
+  box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1);
+  transform: translateX(18em);
+  opacity: 0;
+  transition: 0.2s;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 0.25em;
+}
+
+.Show_Battery_Card{
+  transform: translateX(0);
+  opacity: 1;
+  transition: 0.2s;
+}
+
+#Battery_Card_Title{
+  margin-top: 0.5em;
+}
+
+#Battery_Card_Title,#Power_Source_Heading,#Energy_Heading,#Using_Significant_Energy_Application,#Battery_Preferences_Label{
   display: flex;
   font-size: 0.8em;
   align-items: center;
@@ -8,21 +43,42 @@
   font-weight: bold;
   font-family: Arial;
   color: rgb(65,65,65);
-  border: 1px solid white;
+  height: 100%;
+  box-sizing: border-box;
 }
 
-#Power_Source_Heading,#Energy_Heading{
+#Power_Source_Heading,#Energy_Heading,#Using_Significant_Energy_Application,#Battery_Preferences_Label{
   font-size: 0.78em;
   color: rgba(0,0,0,0.4);
   font-weight: normal;
+  box-sizing: border-box;
+}
+
+#Using_Significant_Energy_Application{
+  grid-row: 5 / span 1;
+  height: 100%;
+}
+
+#Significant_App_Energy_Logo{
+  height: 80%;
+  aspect-ratio: 1 / 1;
+  background-color: rgba(0,0,0,0.1);
+  border-radius: 0.4em;
+}
+
+#Significant_App_Energy_Label{
+  padding-left: 0.5em;
+}
+
+#Battery_Preferences_Label{
+  color: rgb(65,65,65);
 }
 
 .Battery_Card_Spacers{  
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid white;
-
+  height: 100%;
 }
 
 .Horizontal_Rules_2{
@@ -30,3 +86,5 @@
   width: 90%;
   background-color: rgba(0,0,0,0.1);
 }
+
+
