--- a/Pages/Code_Stylesheets/Dock.css
+++ b/Pages/Code_Stylesheets/Dock.css
@@ -23,6 +23,7 @@
   padding-left: 0.5em;
   padding-right: 0.5em;
   border-radius: 0.5em;
+  z-index: 20;
 }
 
 #Icon_Label:after {
@@ -60,7 +61,7 @@
   box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1);
   background-color: rgba(255,255,255,0.4);
   background-color: rgba(225,225,232,0.5);
-
+  z-index: 20;
 }
 
 .App_Icons{
