--- a/Pages/Code_Stylesheets/Network_Card.css
+++ b/Pages/Code_Stylesheets/Network_Card.css
@@ -1,4 +1,39 @@
 
+.Network_Card{
+  display: grid;
+  grid-template-rows: 2.5em 0.535em 1.5em 2em 2em 0.535em 1.5em 0.535em 1.5em;
+  grid-template-columns: repeat(10,1fr);
+  position: absolute;
+  color: black;
+  height: 12.84em;
+  width: 14em;
+  background-color: rgba(255,255,255,0.4);
+  border-radius: 0.5em;
+  top: 2.3em;
+  right: 1.3em;
+  z-index: 1;
+  -webkit-backdrop-filter: blur(1em);
+  backdrop-filter: blur(1em);
+  box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1);
+  transform: translateX(18em);
+  opacity: 0;
+  transition: 0.2s;
+  overflow: hidden;
+  transition: 0.2s;
+  z-index: 2;
+}
+
+.Network_Card_Collapsed{
+  height: 2.5em;
+  height: 12.84em;
+}
+
+.Show_Network_Card{
+  transform: translateX(0);
+  opacity: 1;
+  transition: 0.2s;
+}
+
 #Wifi_Label,#Preferred_Networks_Label,#Other_Networks_Label,#Network_Preferences_Label{
   display: flex;
   font-size: 0.8em;
