--- a/Pages/Code_Stylesheets/Window.css
+++ b/Pages/Code_Stylesheets/Window.css
@@ -9,12 +9,15 @@
 }
 
 html,body{
+
   background-color: var(--System_Grey);
   margin: 0;
   background-color: rgba(225,225,232,1);
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   overflow: hidden; /* Hide scrollbars */
 }
 
