--- a/Pages/Code_Stylesheets/Control_Center_Card.css
+++ b/Pages/Code_Stylesheets/Control_Center_Card.css
@@ -45,6 +45,10 @@
 #Main_Toggles_Container{
   grid-row: 1 / span 4;
   grid-column: 1 / span 4;
+  display: grid;
+  grid-template-rows: ;
+  grid-template-columns: ;
+  
 }
 
 #Do_Not_Disturb_Container{
