--- a/Pages/Code_Stylesheets/Control_Center_Card.css
+++ b/Pages/Code_Stylesheets/Control_Center_Card.css
@@ -1,13 +1,16 @@
+:root{
+  --Control_Center_Scaling_Factor: 1.6;
+}
 
 .Control_Center_Card{
   --Spacing: 0.5em;
   --Width: 18em;
-  --Scaler: 1.4;
+  --Control_Center_Scaling_Factor: 1.6;
   display: grid;
   grid-gap: var(--Spacing);
   padding: var(--Spacing);
-  grid-template-rows: repeat(10,calc(1em * var(--Scaler))) calc(1.8em * var(--Scaler));
-  grid-template-columns: repeat(8,calc(1em * var(--Scaler)));
+  grid-template-rows: repeat(10,calc(1em * var(--Control_Center_Scaling_Factor))) calc(1.8em * var(--Control_Center_Scaling_Factor));
+  grid-template-columns: repeat(8,calc(1em * var(--Control_Center_Scaling_Factor)));
   position: absolute;
   color: black;
   background-color: rgba(255,255,255,0.4);
@@ -33,11 +36,11 @@
 }
 
 .Control_Centre_Divisions{
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,0.2);
   height: 100%;
   width: 100%;
   border-radius: 0.6em;
-  box-shadow: 0em 0.1em 1em 0.02em rgba(0,0,0,0.2);
+  box-shadow: 0em 0.1em 0.3em 0.02em rgba(0,0,0,0.1);
 }
 
 #Main_Toggles_Container{
@@ -56,14 +59,14 @@
 .Circle_Control_Center_Toggles{
   background-color: blue; 
   aspect-ratio: 1 / 1;
+  height: 1.6em;
   border-radius: 100%;
   background-color: rgba(0,0,0,0.1);
 }
 
 .Main_Toggle_Heading{
   display: flex;
-  /* background-color: rgba(0,0,0,0.1);  */
-  font-size: 0.5em;
+  font-size: 0.6em;
   font-weight: bolder;
   padding-left: 0.7em;
   align-items: center;
@@ -75,35 +78,146 @@
   color: rgb(0,0,0,0.5);
 }
 
-
 #Do_Not_Disturb_Container{
   grid-row: 1 / span 2;
   grid-column: 5 / span 4;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 3fr;
+  overflow: hidden;
+  grid-gap: 0.2em;
+  padding: 0.6em;
+  box-sizing: border-box;
+  align-items: center;
 }
 
 #Keyboard_Brightness_Container{
   grid-row: 3 / span 2;
   grid-column: 5 / span 2;
+  overflow: hidden;
 }
 
 #Screen_Mirroring_Container{
   grid-row: 3 / span 2;
   grid-column: 7 / span 2;
+  overflow: hidden;
 }
 
-#Display_Slider_Container{
+#Keyboard_Brightness_Symbol,#Screen_Mirroring_Symbol{
+  /* background-color: red; */
+  height: 40%;
+}
+
+.Function_Labels{
+  display: flex;
+  height: 60%;
+  font-size: 0.6em;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: rgb(0,0,0,0.7);
+  padding: 0.3em;
+  box-sizing: border-box;
+}
+
+#Display_Container{
   grid-row: 5 / span 2;
   grid-column: 1 / span 8;
+  padding: 0.4em;
+  box-sizing: border-box;
 }
 
-#Sound_Slider_Container{
+#Sound_Container{
   grid-row: 7 / span 2;
   grid-column: 1 / span 8;
+  padding: 0.4em;
+  box-sizing: border-box;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.Slider_Containers{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  border-radius: 0;
+  background-color: rgb(35,35,35,);
+}
+
+.Slider_Labels{
+  display: flex;
+  height: calc(37%);
+  margin-left: -0.25em;
+  font-size: 0.7em;
+  font-weight: bolder;
+  padding-left: 0.7em;
+  align-items: center;
+  color: rgb(0,0,0,0.7);
+  align-items: center;
+}
+
+
+#Display_Slider[disabled],#Sound_Slider[disabled]{
+  -webkit-appearance: none; 
+  background-color: rgb(0,197,185);
+  opacity: 1;
+}
+
+#Display_Slider::-webkit-slider-thumb,#Sound_Slider::-webkit-slider-thumb{
+  appearance: none;
+  -webkit-appearance: none;
+  width: 1.3em;
+  height: 1.3em;
+  border-radius: 1000px;
+  border: 0.06em solid rgba(0,0,0,0.15);
+  background-color: rgba(250,250,250,1);
+  transition: width 0.5s, height 0.5s, border-radius 0.5s;
+  box-shadow: -0.01em 0em 0.2em 0.0em rgba(0,0,0,0.07);
+  filter: brightness(1);
+}
+
+#Display_Slider::-moz-range-thumb,#Sound_Slider::-moz-range-thumb{
+
+}
+
+#Display_Slider,#Sound_Slider{
+  position: absolute;
+  left: 0;
+  -webkit-appearance: none;
+  border-radius: 1000px;
+  width: 97.5%;
+  bottom: 0;
+  box-sizing: border-box;
+  background: linear-gradient(to right, rgba(250,250,250,1) 0%, rgba(250,250,250,1) 77.5%, rgba(0,0,0,0.1) 77.5%, rgba(0,0,0,0.1) 100%);
+  box-shadow: 0em 0em 0em 0.1em rgba(0,0,0,0.1);
+}
+
+#Sound_Slider{
+  width: calc(100% - 1.6em - 0.6em - 0.6em);
 }
 
 #Music_Player_Container{
+  justify-content: center;
+  align-items: center;
   grid-row: 9 / span 2;
   grid-column: 1 / span 8;
+  overflow: hidden;
+  display: grid;
+  grid-gap: 0.6em;
+  grid-template-columns: 1fr 4fr 1fr 1fr;
+  padding: 0.6em;
+  box-sizing: border-box;
+}
+
+#Album_Art{
+  background-color: rgba(0,0,0,0.1);
+  height: 100%;
+  aspect-ratio: 1 / 1;
+  border-radius: 0.2em;
 }
 
 #Battery_Percentage_Container{
@@ -114,9 +228,8 @@
 #Accessibility_Container{
   grid-row: 11 / span 1;
   grid-column: 4 / span 2;
-  width: calc(1.8em * 1.4);
+  width: calc(1.8em * 1.6);
 }
-
 
 
 
