--- a/Pages/Code_Stylesheets/Menu_Bar.css
+++ b/Pages/Code_Stylesheets/Menu_Bar.css
@@ -2,7 +2,7 @@
 #Menu_Bar{
   display: grid;
   grid-template-rows: 1fr;
-  grid-template-columns: 6em 5fr 2em 3em 2em 8em;
+  grid-template-columns: 6em 5fr 2em 3.55em 2em 8em;
   position: fixed;
   top: 0;
   color: rgba(0,0,0,0.4);
@@ -49,9 +49,9 @@
 }
 
 #Battery_Button{
-  background-image: url("../../Assets/Battery_Icon.svg");
-  background-size: 90%;
-  background-position: 30% 55%;
+  background-image: url("../../Assets/Battery_Icon_2.svg");
+  background-size: 110%;
+  background-position: 65% 55%;
   background-repeat: no-repeat;
 }
 
