--- a/Pages/Code_Stylesheets/Control_Center_Card.css
+++ b/Pages/Code_Stylesheets/Control_Center_Card.css
@@ -25,8 +25,8 @@
   opacity: 0;
   transition: 0.2s;
   box-sizing: border-box;
-  /* transform: translateX(0);
-  opacity: 1; */
+  transform: translateX(0);
+  opacity: 1;
 }
 
 .Show_Control_Center_Card{
@@ -44,6 +44,7 @@
 }
 
 #Main_Toggles_Container{
+  position: relative;
   grid-row: 1 / span 4;
   grid-column: 1 / span 4;
   display: grid;
@@ -359,6 +360,63 @@ input::-webkit-inner-spin-button {
   top: calc(50% - var(--Size)/2);
   left: calc(50% - var(--Size)/2);  
 }
+
+
+.Control_Centre_Main_Toggle_Touch_Zones{
+  position: absolute;
+  /* background-color: rgba(0,0,0,0.1); */
+  height: calc(100%/3);
+  width: 100%; 
+  left: 0;
+}
+
+#Main_Toggle_Touch_Zone_1{
+  top: 0;
+}
+
+#Main_Toggle_Touch_Zone_2{
+  top: calc(100% * 1/3);
+}
+
+#Main_Toggle_Touch_Zone_3{
+  top: calc(100% * 2/3);
+}
+
+.Control_Centre_Main_Toggle_Touch_Zones:hover{
+  background-color: rgba(0,0,0,0.1);
+
+  
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
