--- a/Pages/Code_Stylesheets/Control_Center_Card.css
+++ b/Pages/Code_Stylesheets/Control_Center_Card.css
@@ -64,6 +64,7 @@
   height: 1.6em;
   border-radius: 100%;
   background-color: rgba(0,0,0,0.1);
+  transition: 0.15s;
 }
 
 #Control_Center_FileDrop_Icon{
@@ -392,9 +393,9 @@ input::-webkit-inner-spin-button {
 }
 
 .Main_Toggle_Background{
-  
-  
+  background-color: #2075FB;
 }
+
 
 
 
