--- a/Pages/Code_Stylesheets/Control_Center_Card.css
+++ b/Pages/Code_Stylesheets/Control_Center_Card.css
@@ -25,8 +25,6 @@
   opacity: 0;
   transition: 0.2s;
   box-sizing: border-box;
-  transform: translateX(0);
-  opacity: 1;
 }
 
 .Show_Control_Center_Card{
@@ -396,11 +394,16 @@ input::-webkit-inner-spin-button {
   background-color: #2075FB;
 }
 
+.Toggle_Purple_Background{
+  background-color: #595AD3;  
+  animation: Moon_Spin_Frames 0.15s linear forwards;
+}
 
 
-
-
-
+@keyframes Moon_Spin_Frames {
+  from{transform: rotate(0deg);}
+  to{transform: rotate(360deg);}
+}
 
 
 
