--- a/Pages/Code_Stylesheets/Window.css
+++ b/Pages/Code_Stylesheets/Window.css
@@ -9,7 +9,6 @@
 }
 
 html,body{
-
   background-color: var(--System_Grey);
   margin: 0;
   background-color: rgba(225,225,232,1);
@@ -19,12 +18,11 @@ body {
   height: 100vh;
   width: 100vw;
   overflow: hidden; /* Hide scrollbars */
-}
-
-body {
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
   scrollbar-width: none;  /* Firefox */
+  filter: brightness(1);
 }
+
 body::-webkit-scrollbar { 
   display: none;  /* Safari and Chrome */
 }
