--- a/Stylesheets/Animations.css
+++ b/Stylesheets/Animations.css
@@ -35,6 +35,29 @@
     0%{transform: scale(1);}
     50%{transform: scale(1.05);}
     100%{transform: scale(1);}
-
   }
+  
+  .Scale_Level_0{
+    transform: scale(1.2);
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   
