--- a/Pages/Code_Stylesheets/Widgets_Card.css
+++ b/Pages/Code_Stylesheets/Widgets_Card.css
@@ -20,8 +20,8 @@
   /* -webkit-backdrop-filter: blur(300em); */
   /* backdrop-filter: blur(300em); */
   /* box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1); */
-  transform: translateX(20em);
-  opacity: 0;
+  transform: translateX(25em);
+  /* opacity: 1; */
   transition: 0.2s ease-out;
   z-index: 20;
   /* -webkit-mask: -webkit-gradient(linear,right 5%,left 5%,from(rgba(255, 255, 255, 1)),to(rgba(255, 255, 255, 0))); */
@@ -43,7 +43,6 @@
 
 #Activity_Bands_Widget{
     grid-column: 1 / span 2;
-  
 }
 
 
