--- a/Pages/Code_Stylesheets/Dock.css
+++ b/Pages/Code_Stylesheets/Dock.css
@@ -60,7 +60,7 @@
   backdrop-filter: blur(1em);
   box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1);
   background-color: rgba(255,255,255,0.3);
-  z-index: 20;
+  z-index: 15;
 }
 
 .App_Icons{
@@ -81,6 +81,7 @@
   background-size: 105%;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 100%;
 }
 
 #Background{
@@ -95,9 +96,16 @@
 }
 
 #Certifications_Icon{
-  background-image: url("../../Assets/Education_Icon.svg");
+  background-image: url("../../Assets/Certifications_Icon.svg");
   -webkit-transform: translate3d(0,0,0);
 }
+
+#Education_Icon{
+  background-image: url("../../Assets/Education_Icon.svg");
+  -webkit-transform: translate3d(0,0,0);
+  background-size: 100%;
+}
+
 
 #Courses_Icon{
   background-image: url("../../Assets/Courses_Icon.svg");
@@ -113,6 +121,7 @@
   background-image: url("../../Assets/Toybox_Icon_V2.svg");
   -webkit-transform: translate3d(0,0,0);
   filter: hue-rotate(230deg);
+  background-size: 105%;
 }
 
 #Academic_Projects_Icon{
@@ -127,7 +136,6 @@
   background-size: 100%;
 }
 
-
 #Messages_Icon{
   background-image: url("../../Assets/Messages_Icon.svg");
   -webkit-transform: translate3d(0,0,0);
@@ -135,7 +143,26 @@
   filter: saturate(0.8);
 }
 
+#Links_Icon{
+  background-image: url("../../Assets/Links_Icon.svg");
+  -webkit-transform: translate3d(0,0,0);
+  background-size: 100%;
+  filter: saturate(0.8);
+}
 
+#Mail_Icon{
+  background-image: url("../../Assets/Mail_Icon.svg");
+  -webkit-transform: translate3d(0,0,0);
+  background-size: 100%;
+  filter: saturate(0.8);
+}
+
+#Mail_Icon{
+  background-image: url("../../Assets/Mail_Icon.svg");
+  -webkit-transform: translate3d(0,0,0);
+  background-size: 100%;
+  filter: saturate(0.8);
+}
 
 
 
