--- a/Pages/Code_Stylesheets/Widgets_Card.css
+++ b/Pages/Code_Stylesheets/Widgets_Card.css
@@ -1,5 +1,5 @@
 
-.Widgets_Card{
+.Widgets_Card,.Widgets_Glass_Background{
   display: grid;
   --Spacing: 0.9em;
   grid-gap: var(--Spacing);
@@ -10,25 +10,30 @@
   position: absolute;
   color: black;
   height: calc(100vh - 2em);
-  /* width: 22em; */
-  /* background-color: rgba(255,255,255,0.3); */
-  /* border: 2px solid white; */
   border-radius: 0em;
   top: 2em;
   right: 0em;
   z-index: 1;
-  /* -webkit-backdrop-filter: blur(300em); */
-  /* backdrop-filter: blur(300em); */
-  /* box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1); */
   transform: translateX(25em);
-  /* opacity: 1; */
   transition: 0.2s ease-out;
   z-index: 20;
-  /* -webkit-mask: -webkit-gradient(linear,right 5%,left 5%,from(rgba(255, 255, 255, 1)),to(rgba(255, 255, 255, 0))); */
-  /* transform: translateX(0);
-  opacity: 1; */
   overflow: scroll;
+  z-index: 20;
 }
+
+.Widgets_Glass_Background{
+  width: 22em;
+  background-color: rgba(255,255,255,0.5);
+  -webkit-backdrop-filter: blur(300em);
+  backdrop-filter: blur(300em);
+  box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1);
+  -webkit-mask: -webkit-gradient(linear,right 5%,left 5%,from(rgba(255, 255, 255, 1)),to(rgba(255, 255, 255, 0)));
+  opacity: 1;
+  z-index: 19;
+  transform: translateX(20em);
+  transition: 0.2s ease-out;
+}
+
 
 .Show_Widgets_Card{
   transform: translateX(0);
